# dojo.c

./: .gitignore  Cargo.toml  Cross.toml  DIPLOMAT_IMPLEMENTATION_PLAN.md  DIPLOMAT_MIGRATION.md  Dojo.g.cs  README.md  SWIFT_BRIDGE.md  SWIFT_BRIDGE_IMPLEMENTATION.md  SWIFT_BRIDGE_TYPES.md  SWIFT_TORII_CLIENT.md  bindings.h  build.rs  dojo.cpp  dojo.h  dojo.hpp  dojo.java  dojo.pyx  node-example.js  package.json  pnpm-lock.yaml  rustfmt.toml  uniffi.toml
.claude/skills/dojo-c-development/: SKILL.md
.claude/skills/dojo-c-development/agents/: openai.yaml
.github/workflows/: ci.yml  release.yml
bindings/c/: Account.d.h  Account.h  Achievement.d.h  Achievement.h  Activity.d.h  Activity.h  AggregationEntry.d.h  AggregationEntry.h  BlockId.d.h  BlockId.h  BlockTag.d.h  BlockTag.h  Call.d.h  Call.h  CallList.d.h  CallList.h  CallType.d.h  CallType.h  Clause.d.h  Clause.h  ComparisonOperator.d.h  ComparisonOperator.h  Contract.d.h  Contract.h  ContractType.d.h  ContractType.h  DojoError.d.h  DojoError.h  Entity.d.h  Entity.h  EntityQuery.d.h  EntityQuery.h  Enum.d.h  Enum.h  EnumOption.d.h  EnumOption.h  ErrorType.d.h  ErrorType.h  Event.d.h  Event.h  (+58 more)
bindings/cpp/: Account.d.hpp  Account.hpp  Achievement.d.hpp  Achievement.hpp  Activity.d.hpp  Activity.hpp  AggregationEntry.d.hpp  AggregationEntry.hpp  BlockId.d.hpp  BlockId.hpp  BlockTag.d.hpp  BlockTag.hpp  Call.d.hpp  Call.hpp  CallList.d.hpp  CallList.hpp  CallType.d.hpp  CallType.hpp  Clause.d.hpp  Clause.hpp  ComparisonOperator.d.hpp  ComparisonOperator.hpp  Contract.d.hpp  Contract.hpp  ContractType.d.hpp  ContractType.hpp  DojoError.d.hpp  DojoError.hpp  Entity.d.hpp  Entity.hpp  EntityQuery.d.hpp  EntityQuery.hpp  Enum.d.hpp  Enum.hpp  EnumOption.d.hpp  EnumOption.hpp  ErrorType.d.hpp  ErrorType.hpp  Event.d.hpp  Event.hpp  (+61 more)
bindings/csharp/: dojo.cs
bindings/go/: dojo.go  dojo.h  go.mod
bindings/js/: Account.d.ts  Account.mjs  Achievement.d.ts  Achievement.mjs  Activity.d.ts  Activity.mjs  AggregationEntry.d.ts  AggregationEntry.mjs  BlockId.d.ts  BlockId.mjs  BlockTag.d.ts  BlockTag.mjs  Call.d.ts  Call.mjs  CallList.d.ts  CallList.mjs  CallType.d.ts  CallType.mjs  Clause.d.ts  Clause.mjs  ComparisonOperator.d.ts  ComparisonOperator.mjs  Contract.d.ts  Contract.mjs  ContractType.d.ts  ContractType.mjs  DojoError.d.ts  DojoError.mjs  Entity.d.ts  Entity.mjs  EntityQuery.d.ts  EntityQuery.mjs  Enum.d.ts  Enum.mjs  EnumOption.d.ts  EnumOption.mjs  ErrorType.d.ts  ErrorType.mjs  Event.d.ts  Event.mjs  (+60 more)
bindings/kotlin/com/dojoengine/dojo/: dojo.kt
bindings/python/: dojo.py
bindings/react-native/cpp/: dojo.cpp  dojo.hpp
bindings/react-native/ts/: dojo-ffi.ts  dojo.ts
bindings/swift/: DojoEngine.swift  DojoEngineFFI.h  dojo.swift  dojo_c.modulemap
crates/c/: Cargo.toml  build.rs  dojo.h  dojo.hpp  dojo.pyx
crates/c/src/: lib.rs  types.rs
crates/core/: Cargo.toml
crates/dojo-core/: Cargo.toml
crates/dojo-core/src/: constants.rs  lib.rs  utils.rs
crates/uniffi/: Cargo.toml  build.rs  uniffi.toml
crates/uniffi/src/: dojo.udl  lib.rs
crates/uniffi/src/uniffi/: README.md  client.rs  core.rs  mod.rs
crates/uniffi/src/uniffi/types/: achievement.rs  activity.rs  aggregation.rs  contract.rs  controller.rs  core.rs  entity.rs  event.rs  mod.rs  query.rs  schema.rs  search.rs  token.rs  transaction.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs  types.rs  utils.rs
example/: main  main.c
example/main.dSYM/Contents/Resources/DWARF/: main
example/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
examples/: diplomat_example.c  diplomat_example.js
examples/c/: README.md  build.sh  main  main.c
examples/c/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
examples/cpp/: CMakeLists.txt  README.md  build.sh  fetch_entities.cpp  run_fetch_entities.sh
examples/csharp/: DojoExamples.csproj  FetchEntities.cs  README.md
examples/go/: README.md  fetch_entities.go  go.mod  run.sh
examples/kotlin/: README.md  SimpleTest.kt  run_fetch_entities.sh  run_simple_test.sh
examples/python/: README.md  fetch_entities.py  subscribe_entities.py
examples/swift/: README.md  fetch_entities.swift  run_fetch_entities.sh
playground/: README.md  entities.html  events.html  setup.js  tokens.html
scripts/: build_all_bindings.sh  build_android.sh  build_c.sh  build_cpp.sh  build_csharp.sh  build_everything.sh  build_go.sh  build_ios.sh  build_swift.sh  build_wasm.sh  build_wasm_playground.sh  build_wasm_web.sh  example.sh  install_bindgen_tools.sh
src/: constants.rs  dojo.udl  dojo_full.udl.bak  global_types.rs  lib.rs  libc.rs  libwasm.rs  storage.rs  types.rs  utils.rs
src/c/: mod.rs  types.rs
src/ffi/: account.rs  achievements.rs  activity.rs  client.rs  contracts.rs  crypto.rs  enums.rs  error.rs  events.rs  mod.rs  models.rs  query.rs  subscription.rs  tokens.rs  types.rs
src/swift/: mod.rs
src/uniffi/: README.md  client.rs  contract.rs  core.rs  entity.rs  event.rs  mod.rs  query.rs
src/uniffi/types/: achievement.rs  activity.rs  aggregation.rs  core.rs  event.rs  mod.rs  schema.rs  token.rs  transaction.rs
src/wasm/: mod.rs  types.rs  utils.rs
