[package]
edition = "2021"
name = "dojo-c"
version = "1.5.0"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
dojo-world = { git = "https://github.com/dojoengine/dojo", rev = "4145801" }
dojo-types = { git = "https://github.com/dojoengine/dojo", rev = "4145801" }
torii-proto = { git = "https://github.com/dojoengine/torii", rev = "9a3f85b" }
torii-client = { git = "https://github.com/dojoengine/torii", rev = "9a3f85b" }
torii-grpc-client = { git = "https://github.com/dojoengine/torii", rev = "9a3f85b" }
torii-libp2p-types = { git = "https://github.com/dojoengine/torii", rev = "9a3f85b" }

starknet = "0.13.0"
starknet-crypto = "0.7.2"
starknet-types-core = { version = "0.1.6", features = ["arbitrary"] }

parking_lot = "0.12.1"
tokio = { version = "1.39.2", default-features = false, features = ["rt"] }
url = "2.5.0"
anyhow = "1.0.89"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.115"
tokio-stream = "0.1.14"
futures = "0.3.30"
futures-channel = "0.3.30"
wasm-bindgen = "0.2.92"
stream-cancel = "0.8.2"
cainome = { git = "https://github.com/cartridge-gg/cainome", tag = "v0.3.2" }
lazy_static = "1.5.0"
account_sdk = { git = "https://github.com/cartridge-gg/controller", rev = "dbbe0353d64de743739d425f8aab91ca3ac0e16f" }

serde-wasm-bindgen = "0.6.3"
wasm-bindgen-futures = "0.4.39"
js-sys = "0.3.77"
web-sys = { version = "0.3.77", features = [
  'MessageEvent',
  'Window',
  'Worker',
  'WorkerGlobalScope',
  'console',
] }
crypto-bigint = "0.5.5"
tsify-next = { version = "0.5.4", features = ["js"] }
instant = { version = "0.1.13", features = ["wasm-bindgen"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
num-bigint = "0.4.6"
num-traits = "0.2.19"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = "0.8.1"
open = "5.3.2"
urlencoding = "2.1.3"
keyring = { version = "3.6.1", features = [
  "apple-native",
  "windows-native",
  "sync-secret-service",
] }
directories = "6.0.0"
tower-http = { version = "0.6.2", features = ["cors"] }
base64 = "0.22.1"


[build-dependencies]
# this addresses issue with cyclical dependencies when generating C header
# see. https://github.com/mozilla/cbindgen/issues/43
cbindgen = { git = "https://github.com/masnagam/cbindgen", branch = "fix-issue-43" }

[patch.crates-io]
crunchy = { git = "https://github.com/nmathewson/crunchy", branch = "cross-compilation-fix" }