[workspace]
resolver = "2"
members = [
    "crates/dojo-core",
    "crates/c",
    "crates/wasm",
]

[workspace.package]
edition = "2021"
version = "1.8.3"

[workspace.dependencies]
# Dojo dependencies
dojo-world = { git = "https://github.com/dojoengine/dojo", rev = "0afeb1bc" }
dojo-types = { git = "https://github.com/dojoengine/dojo", rev = "0afeb1bc" }
torii-proto = { git = "https://github.com/dojoengine/torii", rev = "8378c63" }
torii-client = { git = "https://github.com/dojoengine/torii", rev = "8378c63" }
torii-grpc-client = { git = "https://github.com/dojoengine/torii", rev = "8378c63" }

# Starknet dependencies
starknet = "0.17.0"
starknet-crypto = "0.8"
starknet-types-core = { version = "0.2.0", features = ["arbitrary"] }

# Core dependencies
parking_lot = "0.12.1"
tokio = { version = "1.39.2", default-features = false, features = ["rt"] }
url = "2.5.0"
anyhow = "1.0.89"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.115"
tokio-stream = "0.1.14"
futures = "0.3.30"
futures-channel = "0.3.30"
stream-cancel = "0.8.2"
cainome = "0.10.1"
lazy_static = "1.5.0"
crypto-bigint = "0.5.5"
chrono = "0.4.41"

# WASM dependencies
wasm-bindgen = "0.2.92"
serde-wasm-bindgen = "0.6.3"
wasm-bindgen-futures = "0.4.39"
js-sys = "0.3.77"
web-sys = { version = "0.3.77", features = [
  'MessageEvent',
  'Window',
  'Worker',
  'WorkerGlobalScope',
  'console',
] }
tsify-next = { version = "0.5.4", features = ["js"] }
instant = { version = "0.1.13", features = ["wasm-bindgen"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
gloo-utils = { version = "0.2.0", features = ["serde"] }
num-bigint = "0.4.6"
console_error_panic_hook = "0.1.5"
num-traits = "0.2.19"

# Internal crates
dojo-core = { path = "crates/dojo-core" }
c = { path = "crates/c" }
wasm = { path = "crates/wasm" }

[patch.crates-io]
crunchy = { git = "https://github.com/nmathewson/crunchy", branch = "cross-compilation-fix" }
starknet-crypto = { git = "https://github.com/glihm/starknet-rs", rev = "c1e7e19f45f9fad6ea2796da9b7b3dcf8f9f2b82" }
