[package]
name = "dojo-uniffi"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "dojo"

[dependencies]
dojo-core = { workspace = true }

dojo-world.workspace = true
dojo-types.workspace = true
torii-proto.workspace = true
torii-client.workspace = true
torii-grpc-client.workspace = true

starknet.workspace = true
starknet-crypto.workspace = true

tokio.workspace = true
url.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-stream.workspace = true
futures.workspace = true
futures-util.workspace = true
stream-cancel.workspace = true
cainome.workspace = true
lazy_static.workspace = true
crypto-bigint.workspace = true
chrono.workspace = true
num-bigint.workspace = true
num-traits.workspace = true

# UniFFI
uniffi = { version = "0.30", features = ["bindgen", "cli"] }
uniffi_bindgen = "0.30"
camino = "1.1"
thiserror = "2"
hex = "0.4"
cargo_metadata = "0.19"

# Platform-specific dependencies
axum = "0.8.1"
open = "5.3.2"
urlencoding = "2.1.3"
keyring = { version = "3.6.1", features = [
  "apple-native",
  "windows-native",
  "sync-secret-service",
] }
directories = "6.0.0"
tower-http = { version = "0.6.2", features = ["cors"] }
base64 = "0.22.1"

[build-dependencies]
uniffi = { version = "0.30", features = ["build"] }

[dev-dependencies]
uniffi = { version = "0.30", features = ["bindgen-tests"] }

# UniFFI bindgen binaries
[[bin]]
name = "uniffi-bindgen-swift"
path = "src/bin/uniffi-bindgen-swift.rs"

[[bin]]
name = "uniffi-bindgen-kotlin"
path = "src/bin/uniffi-bindgen-kotlin.rs"

[[bin]]
name = "uniffi-bindgen-python"
path = "src/bin/uniffi-bindgen-python.rs"

[features]
default = []

