[package]
name = "dojo-wasm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dojo-core = { workspace = true }

dojo-world.workspace = true
dojo-types.workspace = true
torii-proto.workspace = true
torii-client.workspace = true

starknet.workspace = true
starknet-crypto.workspace = true

tokio = { version = "1.39.2", default-features = false }
url.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
stream-cancel.workspace = true
cainome.workspace = true
crypto-bigint.workspace = true
chrono.workspace = true

# WASM-specific dependencies
wasm-bindgen.workspace = true
serde-wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
web-sys.workspace = true
tsify-next.workspace = true
instant.workspace = true
gloo-timers.workspace = true
gloo-utils.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
console_error_panic_hook.workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3.33"

